if(APPLE)
	message(STATUS "Building macOS port.")
	add_subdirectory(mac)
else()
	message(STATUS "macOS port disabled.")
endif()

find_package(SDL3 CONFIG COMPONENTS SDL3-shared)
if(SDL3_FOUND)
	message(STATUS "Building SDL3 port.")
	add_subdirectory(sdl)
else()
	message(STATUS "SDL3 port disabled.")
endif()

add_subdirectory(encrypt)
add_subdirectory(controller)
