add_subdirectory(util)

target_sources(
    nes
    PRIVATE
        nes.hh
        nes.cc
        cartridge.hh
        cartridge.cc
        display.hh
        display.cc
        controller.hh
        controller.cc
        cpu.hh
        cpu.cc
        ppu.hh
        ppu.cc
        mapper.hh
        mapper.cc)